adição do footer

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vivara - Autenticação de Rede</title>
+    <title>Autenticação de Rede | Vivara</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="imagens/vivara-icon2.jpg" type="image/x-icon">
 </head>
@@ -43,11 +43,28 @@
             </div>    
 
             <div class="entrar">
-                <button type="submit">Acessar Rede</button>
+                <button type="submit">Autenticar</button>
             </div>
         </form>
 
     </div>
+
+
+
+    <footer>
+        <div class="site-vivara">
+            <p>Nossa Empresa</p>
+            <a href="https://www.vivara.com.br/institucional/conheca-a-vivara">Sobre a Vivara</a>
+        </div>
+
+        <div class="redes-sociais-footer">
+            <p>Redes Sociais</p>
+            <nav>
+                <a href="https://pt-br.facebook.com/Vivara/"> <img src="https://img.freepik.com/psd-premium/icone-de-midia-social-do-facebook-3d_466778-4384.jpg?semt=ais_hybrid&w=740&q=80" alt="" width="20px" height="20px"></a>
+            </nav>
+            
+        </div>
+    </footer>
 
 </body>
 </html>
