hospedado as imasgens
hospedagem das imagens

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Autenticação de Rede | Vivara</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="imagens/vivara-icon2.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="https://i.postimg.cc/26qDY5PZ/vivara-icon2.jpg" type="image/x-icon">
 </head>
 <body>
 
@@ -22,7 +22,8 @@
     <div class="container-login">
 
         <div class="vivara-logo2">
-            <img src="imagens/logo-vivara-preto.png" alt="Vivara Logo" width="220px" height="60px">
+            
+            <img src="https://i.postimg.cc/13zDyh3Q/logo-vivara-preto.png" alt="Vivara Logo" width="220px" height="60px">
             <p>Autentique-se para acessar à Rede</p>
         </div>
    
