hospedado as imagens

--- a/código-html-css.html
+++ b/código-html-css.html
@@ -12,17 +12,18 @@
 
     <style>
 
-        html, body{
+
+html, body{
     margin: 0;
     background-color: #4F0B05;
-    background-image: url(imagens/vivara-background11.png);
+    background-image: url(https://i.postimg.cc/FzRh7Zd7/vivara-background11.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 @media (max-width: 1024px) {
   body {
-    background-image: url("imagens/vivara-background-12.png");
+    background-image: url("https://i.postimg.cc/vTkwDdwN/vivara-background-12.png");
     background-size: cover;
     background-repeat: no-repeat;
   }
@@ -31,7 +32,7 @@
 
 @media (max-width: 500px) {
   body {
-    background-image: url("imagens/vivara-background-13.png");
+    background-image: url("https://i.postimg.cc/HsY68NkS/vivara-background-13.png");
     background-size: cover;
     background-position: left center;
   }
@@ -162,10 +163,6 @@ footer>a{
 
 
     </style>
-
-
-
-
 
     <header>
     
